<resources>
    <string name="app_name">CleanNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note_button_cd">button add note</string>
    <string name="content">Content: </string>
    <string name="title">Title: </string>
    <string name="last_updated">Last updated: </string>
    <string name="delete">delete</string>
    <string name="you_dont_have_any_note">Note list is empty</string>
    <string name="create_note">Create Note</string>
    <string name="new_note">New Note</string>
    <string name="words">Words:</string>
</resources>